--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,7 @@ api-version: 1.16
 authors: [simmimine]
 description: Lumberjack autoreplant of saplings when bottom log broken
 website: www.github.com/simmimine
+
+commands:
+  lumberjackreplant:
+    description: Toggle on to autoreplant saplings
